releases/0.2.0/docs/cpp/_sources/api/program_listing_file__home_runner_work_slint_slint_api_cpp_include_slint_image.h.rst.txt

.. _program_listing_file__home_runner_work_slint_slint_api_cpp_include_slint_image.h:

Program Listing for File slint_image.h
======================================

|exhale_lsh| :ref:`Return to documentation for file <file__home_runner_work_slint_slint_api_cpp_include_slint_image.h>` (``/home/runner/work/slint/slint/api/cpp/include/slint_image.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   // Copyright © SixtyFPS GmbH <info@slint-ui.com>
   // SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial
   
   #pragma once
   #include <string_view>
   #include "slint_generated_public.h"
   #include "slint_size.h"
   #include "slint_image_internal.h"
   #include "slint_string.h"
   #include "slint_sharedvector.h"
   
   namespace slint {
   
   struct Image
   {
   public:
       Image() : data(Data::None()) { }
   
       static Image load_from_path(const SharedString &file_path)
       {
           Image img;
           img.data = Data::AbsoluteFilePath(file_path);
           return img;
       }
   
       /*
       static Image load_from_argb(int width, int height, const SharedVector<uint32_t> &data) {
           Image img;
           img.data = Data::EmbeddedRgbaImage(width, height, data);
           return img;
       }
       */
   
       Size<unsigned int> size() const { return cbindgen_private::types::slint_image_size(&data); }
   
       std::optional<slint::SharedString> path() const
       {
           if (auto *str = cbindgen_private::types::slint_image_path(&data)) {
               return *str;
           } else {
               return {};
           }
       }
   
       friend bool operator==(const Image &a, const Image &b) { return a.data == b.data; }
       friend bool operator!=(const Image &a, const Image &b) { return a.data != b.data; }
   
       explicit Image(cbindgen_private::types::Image inner) : data(inner) { }
   
   private:
       using Tag = cbindgen_private::types::ImageInner::Tag;
       using Data = cbindgen_private::types::Image;
       Data data;
   };
   
   }
